# aps-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/aps_bot/: __init__.py  __main__.py  bot.py  config.py  relay.py  store.py
tests/: test_relay.py  test_store.py
