[project]
name = "aps-bot"
version = "1.0.0"
description = "Standalone Discord webhook relay for seamless, media-capable posts"
requires-python = ">=3.11"
dependencies = ["discord.py==2.7.1"]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
